<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_welcome"
    tools:context=".ui.fragments.LoginFragment">

    <data>

        <variable
            name="loginFragment"
            type="com.ubb.citizen_u.ui.fragments.LoginFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/welcome_textview"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_sign_in_textview"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@id/sign_in_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_textfield"
                android:layout_width="@dimen/width_views"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/generic_margin_between_element"
                android:hint="@string/generic_email_hint"
                app:layout_constraintEnd_toEndOf="@+id/welcome_textview"
                app:layout_constraintStart_toStartOf="@+id/welcome_textview"
                app:layout_constraintTop_toBottomOf="@id/welcome_textview">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_textfield"
                android:layout_width="@dimen/width_views"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/generic_margin_between_element"
                android:hint="@string/generic_password_hint"
                app:endIconMode="password_toggle"
                app:layout_constraintStart_toStartOf="@id/email_textfield"
                app:layout_constraintTop_toBottomOf="@id/email_textfield">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="@dimen/width_views"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="@dimen/width_views"
                android:layout_height="wrap_content"
                android:onClick="@{() -> loginFragment.signIn()}"
                android:text="@string/welcome_sign_in_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcome_textview" />

            <Button
                android:id="@+id/register_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="@dimen/width_views"
                android:layout_height="wrap_content"
                android:onClick="@{() -> loginFragment.register()}"
                android:text="@string/welcome_register_button"
                app:layout_constraintStart_toStartOf="@id/sign_in_button"
                app:layout_constraintTop_toBottomOf="@id/sign_in_button" />

            <ImageView
                android:id="@+id/logo_imageview"
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                android:layout_marginBottom="@dimen/generic_margin_between_element"
                android:importantForAccessibility="no"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toTopOf="@id/welcome_textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:srcCompat="@drawable/logo" />

            <ProgressBar
                android:id="@+id/sign_in_progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/generic_margin_between_element"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/sign_in_button"
                app:layout_constraintStart_toStartOf="@+id/sign_in_button"
                app:layout_constraintTop_toBottomOf="@id/register_button"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/reset_password_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/generic_margin_between_element"
                android:onClick="@{() -> loginFragment.resetPassword()}"
                android:text="@string/welcome_reset_password_textview"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/register_button"
                app:layout_constraintStart_toStartOf="@id/register_button"
                app:layout_constraintTop_toBottomOf="@id/sign_in_progressbar" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/splash_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            tools:visibility="gone">

            <ImageView
                android:id="@+id/logo_splash_imageview"
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                android:layout_marginBottom="@dimen/generic_margin_between_element"
                android:importantForAccessibility="no"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/welcome_splash_textview"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/generic_margin"
                android:text="@string/welcome_sign_in_textview"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@id/logo_splash_imageview"
                app:layout_constraintStart_toStartOf="@id/logo_splash_imageview"
                app:layout_constraintTop_toBottomOf="@id/logo_splash_imageview" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>