<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_register"
    tools:context=".ui.fragments.RegisterFragment">

    <data>

        <variable
            name="registerFragment"
...
        <TextView
            android:id="@+id/register_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multistep_register_create_account_textview"
            android:textAppearance="?attr/textAppearanceHeadline4"
            app:layout_constraintBottom_toTopOf="@id/create_account_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_textfield"
...
