<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_signed_in"
    tools:context=".ui.fragments.SignedInFragment">

    <data>

        <variable
            name="signedInFragment"
...
                    android:text="@string/view_public_spending_button_text"
                    app:layout_constraintEnd_toEndOf="@id/welcome_textview"
                    app:layout_constraintStart_toStartOf="@id/welcome_textview"
                    app:layout_constraintTop_toBottomOf="@id/view_proposed_projects_by_others_button" />

                <Button
                    android:id="@+id/sign_out_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/generic_margin_half"
                    android:backgroundTint="@color/primaryColor"
                    android:onClick="@{() -> signedInFragment.signOut()}"
                    android:text="@string/signed_in_logout_button"
...
