<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_identity_information"
    tools:context=".ui.fragments.multistep.registration.IdentityInformationFragment">

    <data>

        <variable
            name="identityInformationFragment"
...
